--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileFragment"
-    android:background="#ececda">
-
+    android:background="@drawable/logo_background"
+    android:backgroundTint="#808080"
+    android:backgroundTintMode="multiply">
 
 
     <TextView
         android:id="@+id/uname2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="403dp"
+        android:layout_height="43dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
         android:drawablePadding="5dp"
-
+        android:textColor="#aa80ff"
         android:textAlignment="textStart"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -29,32 +30,12 @@
 
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="8dp"
-
-        android:fontFamily="@font/creepster"
-        android:text="Profile"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="#ff4d4d"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/coming_soon"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        android:fontFamily="@font/archivo_black"
         android:text="Username"
         android:textAllCaps="true"
         android:textColor="#ff4d4d"
@@ -79,31 +60,32 @@
 
     <TextView
         android:id="@+id/uname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="397dp"
+        android:layout_height="35dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:drawableLeft="@drawable/ic_person_black_24dp"
         android:drawablePadding="5dp"
+        android:textColor="#aa80ff"
 
         android:textAlignment="textStart"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="180dp"
-        android:layout_height="208dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="156dp"
+        android:layout_height="190dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteY="98dp"
         tools:src="@tools:sample/avatars" />
 
     <TextView
