--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,37 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment"
     android:background="@drawable/logo_background"
     android:backgroundTint="#808080"
-    android:backgroundTintMode="multiply">
+    android:backgroundTintMode="multiply"
+    tools:context=".ProfileFragment">
 
 
     <TextView
         android:id="@+id/uname2"
-        android:layout_width="403dp"
-        android:layout_height="43dp"
+        android:layout_width="393dp"
+        android:layout_height="39dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="73dp"
         android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
         android:drawablePadding="5dp"
-        android:textColor="#aa80ff"
         android:textAlignment="textStart"
+        android:textColor="#aa80ff"
         android:textSize="20sp"
         android:textStyle="bold"
         app:drawableTint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.714" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/archivo_black"
         android:text="Username"
         android:textAllCaps="true"
@@ -67,32 +69,33 @@
         android:layout_marginEnd="8dp"
         android:drawableLeft="@drawable/ic_person_black_24dp"
         android:drawablePadding="5dp"
-        android:textColor="#aa80ff"
-
         android:textAlignment="textStart"
+
+        android:textColor="#aa80ff"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="156dp"
-        android:layout_height="190dp"
-
+        android:layout_width="166dp"
+        android:layout_height="166dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="98dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.139"
         tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:drawableLeft="@drawable/ic_lock_black_24dp"
         android:fontFamily="@font/coming_soon"
         android:text="To change Password, Click here !"
@@ -101,6 +104,7 @@
         android:textStyle="bold"
         app:drawableTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uname2" />
 
