--- a/app/src/main/res/drawable/grad.xml
+++ b/app/src/main/res/drawable/grad.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <gradient android:angle="45"
-        android:endColor="#67EFC8"
+        android:endColor="#e66337"
         android:startColor="#63C9FF"/>
 
 
