--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -46,18 +46,20 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="36dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="-2dp">
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/belgrano"
                     android:text="Name:"
                     android:textColor="#3797CF"
                     android:textSize="24sp" />
@@ -69,7 +71,7 @@
                     android:drawableLeft="@drawable/ic_person_black_24dp"
                     android:drawablePadding="5dp"
                     android:textSize="22sp"
-                    android:fontFamily="sans-serif-light"/>
+                    android:fontFamily="@font/belgrano"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -87,12 +89,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="45dp">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/belgrano"
                     android:text="Email Id:"
                     android:textColor="#3797CF"
                     android:textSize="24sp"/>
@@ -104,7 +107,7 @@
                     android:textSize="22sp"
                     android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
                     android:drawablePadding="5dp"
-                    android:fontFamily="sans-serif-light"/>
+                    android:fontFamily="@font/belgrano"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -122,10 +125,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="45dp">
 
                 <TextView
                     android:id="@+id/textView10"
+                    android:fontFamily="@font/belgrano"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="To reset password, Click on Forgot Password below:"
@@ -139,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_lock_black_24dp"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="@font/belgrano"
 
                     android:text="Forgot Password ?"
                     android:textColor="#000000"
