Update in Profile Fragment

--- a/app/src/main/res/layout/activity_signup__ui.xml
+++ b/app/src/main/res/layout/activity_signup__ui.xml
@@ -11,7 +11,7 @@
         android:id="@+id/google_button"
         android:layout_width="@dimen/fui_auth_method_button_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="@android:color/white"
         android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
         android:drawablePadding="@dimen/fui_auth_method_button_drawablePadding"
@@ -48,7 +48,7 @@
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:background="#ff3858"
         android:drawableLeft="@drawable/ic_action_phone"
         android:drawablePadding="@dimen/fui_auth_method_button_drawablePadding"
@@ -66,8 +66,9 @@
         android:layout_height="430dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="54dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
