--- a/app/src/main/res/layout/cardview_cuisine_book.xml
+++ b/app/src/main/res/layout/cardview_cuisine_book.xml
@@ -13,18 +13,18 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/arabian_img"
+            android:id="@+id/cuisine_img"
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:scaleType="centerCrop"
             android:background="#2d2d2d"/>
         <TextView
-            android:id="@+id/arabian"
+            android:id="@+id/cuisine_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Arabian"
+            android:text="Dish Name"
             android:gravity="center"
-            android:textSize="13sp"
+            android:textSize="18sp"
             android:textColor="#2d2d2d"/>
 
 
