--- a/app/src/main/res/layout/cardview_cuisine_book.xml
+++ b/app/src/main/res/layout/cardview_cuisine_book.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cardview_cuisines"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="180dp"
     android:layout_height="180dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     cardview:cardCornerRadius="4dp">
 
 
