--- a/app/src/main/res/layout/act_list.xml
+++ b/app/src/main/res/layout/act_list.xml
@@ -17,7 +17,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_marginTop="4dp">
                 <TextView
                     android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textColor="#000000"/>
         </LinearLayout>
 
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,14 +52,14 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textColor="#000000"
-            android:textSize="22sp"/>
+            android:textSize="20sp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,14 +72,14 @@
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="22sp"/>
+            android:textSize="20sp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="22sp"/>
+            android:textSize="20sp"/>
     </LinearLayout>
 
     </LinearLayout>
