--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,10 +28,10 @@
         android:layout_height="match_parent"
         android:layout_gravity ="start"
         android:id="@+id/nav_view"
-        android:background="#000000"
-        app:itemTextColor="#ffffff"
-        app:itemIconTint="#ffffff"
-        app:headerLayout="@layout/header"
+        android:background="#ffffff"
+        app:itemTextColor="#b0003a"
+        app:itemIconTint="#b0003a"
+
         app:menu="@menu/drawermenu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
