--- a/app/src/main/res/layout/activity_signup__ui.xml
+++ b/app/src/main/res/layout/activity_signup__ui.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ececda"
+    android:background="#ffffff"
     tools:context=".signup_ui">
 
     <Button
@@ -30,7 +30,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="32dp"
-        android:background="#ff3858"
+        android:background="#b0003a"
         android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
         android:drawablePadding="@dimen/fui_auth_method_button_drawablePadding"
         android:drawableTint="@android:color/white"
@@ -49,7 +49,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="32dp"
-        android:background="#ff3858"
+        android:background="#b0003a"
         android:drawableLeft="@drawable/ic_action_phone"
         android:drawablePadding="@dimen/fui_auth_method_button_drawablePadding"
         android:text="@string/fui_sign_in_with_phone"
