--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -22,6 +22,6 @@
         android:text="Cuisine Name"
         android:textSize="18sp"
         android:gravity="center"
-        android:textColor="#2d2d2d"/>
+        android:textColor="#000000"/>
 
 </LinearLayout>
