--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -27,11 +27,11 @@
                 android:layout_marginTop="19dp">
 
                 <TextView
-                    android:textColor="#000000"
+                    android:textColor="#3797CF"
                     android:id="@+id/heading_book"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/belgrano"
+                    android:fontFamily="@font/adamina"
                     android:text="Booking Name:"
                     android:textSize="22sp"/>
                 <EditText
@@ -39,9 +39,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:id="@+id/book"
-                    android:fontFamily="@font/belgrano"/>
+                    android:fontFamily="@font/amarante"/>
 
             </LinearLayout>
 
@@ -55,16 +55,16 @@
                     android:id="@+id/d_selection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/belgrano"
+                    android:fontFamily="@font/adamina"
                     android:text="Select Booking Date:"
-                    android:textColor="#000000"
+                    android:textColor="#3797CF"
                     android:textSize="22sp"/>
                 <EditText
                     android:id="@+id/date_book"
                     android:textColor="#000000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/belgrano"
+                    android:fontFamily="@font/amarante"
 
                     android:textSize="18sp"/>
 
@@ -80,10 +80,10 @@
                 android:layout_marginTop="60dp">
                 <TextView
                     android:id="@+id/t_selection"
-                    android:textColor="#000000"
+                    android:textColor="#3797CF"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/belgrano"
+                    android:fontFamily="@font/adamina"
                     android:text="Select Booking Time:"
                     android:textSize="22sp"/>
                 <EditText
@@ -91,7 +91,7 @@
                     android:textColor="#000000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/belgrano"
+                    android:fontFamily="@font/amarante"
 
                     android:textSize="18sp"/>
 
@@ -109,8 +109,8 @@
                     android:id="@+id/guests_selection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/belgrano"
-                    android:textColor="#000000"
+                    android:fontFamily="@font/adamina"
+                    android:textColor="#3797CF"
                     android:text="Number of Guests"
                     android:textSize="22sp"/>
                 <Spinner
@@ -124,7 +124,7 @@
         </LinearLayout>
 
         <Button
-            android:layout_marginTop="570dp"
+            android:layout_marginTop="600dp"
             android:layout_marginLeft="96dp"
             android:layout_width="220dp"
             android:layout_height="70dp"
