--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -16,12 +16,13 @@
         android:background="#2d2d2d"/>
 
     <TextView
+        android:id="@+id/text_view68"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/text_view68"
-        android:text="Cuisine Name"
-        android:textSize="18sp"
+        android:fontFamily="@font/asap_medium"
         android:gravity="center"
-        android:textColor="#000000"/>
+        android:text="Cuisine Name"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
 </LinearLayout>
