--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/adamina</item>
+        <item>@font/amarante</item>
         <item>@font/archivo_black</item>
         <item>@font/asap_medium</item>
         <item>@font/belgrano</item>
